fixed navbar collapsing issues for expanded links

--- a/client/src/app/nav-bar/nav-bar.component.scss
+++ b/client/src/app/nav-bar/nav-bar.component.scss
@@ -72,17 +72,17 @@
     z-index: 1;
 }
 
-.nav-bar.clicked { animation: timer 0.3s ease-in; }
-
-@keyframes timer {
-    from { pointer-events: none; }
-    to { pointer-events: unset; }
-}
-
 .grocery-list-link:hover .expand-links { height: fit-content; border: 1px solid rgb(190, 190, 190); }
 
 .expand-icon { transition: all 0.3s ease-in; }
 .grocery-list-link:hover .expand-icon { transform: rotate(180deg); }
+
+.grocery-list-link.clicked { animation: timer 0.3s ease-in forwards; }
+
+@keyframes timer {
+    from { pointer-events: none; }
+    to { pointer-events: all; }
+}
 
 .expand-links > a { 
     position: relative;
